infra/k8s/teams-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: school-teams-service
spec:
  ports:
  - port: 4000
    targetPort: 4000
  type: ClusterIP
  selector:
    app: school-teams
---
apiVersion: apps/v2
kind: Deployment
metadata:
  name: school-teams-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: school-teams
  template:
    metadata:
      labels:
        app: school-teams
    spec:
      containers:
      - name: school-teams
        image: shathaku/school-teams:v1
        ports:
        - containerPort: 4000
        imagePullPolicy: IfNotPresent
