infra/k8s/school-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: school-ingresss
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /welcome
            pathType: Prefix
            backend:
              service:
                name: school-students-service
                port:
                  number: 3000
          - path: /students
            pathType: Prefix
            backend:
              service:
                name: school-students-service
                port:
                  number: 3000
          - path: /team
            pathType: Prefix
            backend:
              service:
                name: school-teams-service
                port:
                  number: 4000
